fix title wrapping

--- a/theme.css
+++ b/theme.css
@@ -9142,3 +9142,6 @@ pre > code.highlight {outline: .4em solid #c94922;outline-offset: .4em;}
 .markdown-body .block-anchor:hover {
   color: #666 !important;
 }
+
+/* wrap headers with long titles */
+.HubBlock-header {word-break: break-all;}
